--- a/documentation/makefile
+++ b/documentation/makefile
@@ -1,11 +1,10 @@
 DOXY_FILE = activity-1
 BUILD_FILE = html
 
-FixPath = $(subst /,\,$1)
 
 doc:
 	doxygen ./$(DOXY_FILE)
 
 clean:
-	rm -rf $(call FixPath,$(BUILD_FILE)/*)
-© 2021 GitHub, Inc.
+	rm -rf html*
+
