--- a/documentation/Makefile
+++ b/documentation/Makefile
@@ -1,9 +1,10 @@
-DOXY_FILE = activity1
+DOXY_FILE = Activity1
 BUILD_FILE = html
 
+FixPath = $(subst /,\,$1)
 
 doc:
 	doxygen ./$(DOXY_FILE)
 
 clean:
-	rm -rf html*
+	rm -rf $(call FixPath,$(BUILD_FILE)/*)
